busqueda de usuario

--- a/app/views/personas/_datos.html.erb
+++ b/app/views/personas/_datos.html.erb
@@ -191,7 +191,7 @@
         <span class="input-group-addon">
           <span class="fa fa-money"></span>
         </span>
-        <%= contrato_builder.text_field :sueldo_externo,:class => "form-control" %>
+        <%= contrato_builder.number_field :sueldo_externo,:class => "form-control" %>
         <span class="input-group-addon">Bs.</span>
       </div>
     </div>
