--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -23,15 +23,18 @@
         <td><%= persona.cargo.nombre %></td>
         <td><%= persona.cargo.sueldos.last.monto %></td>
         <td>
-        <%= link_to '', persona,class: "fa fa-eye" %>
-          <%= link_to '', edit_persona_path(persona),class: "fa fa-pencil" %>
-          <%= link_to '', persona,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+          <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+
+        <%= link_to '', persona,class: "btn btn-default fa fa-eye " %>
+          <%= link_to '', edit_persona_path(persona),class: "btn btn-default fa fa-pencil" %>
+          <%= link_to '', persona,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
       </tr>
       <% end %>
     </tbody>
   </table>
-
-  <%= will_paginate p%>
+<div class="pagination text-center">
+  <%= will_paginate p, renderer: BootstrapPagination::Rails %>
+</div>
 </div>
 <%elsif%>
 <div class="actions">
