--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,6 +73,22 @@ case '0':{
   $(function () {
     se()
     $('#main-menu').metisMenu();
+
+          var $this = $('#main-menu'),
+            resizeTimer,
+            self = this;
+
+          var initCollapse = function(el) {
+            if ($(window).width() >= 768) {
+              this.find('li').has('ul').children('a').off('click');
+            }
+          };
+
+          $(window).resize(function() {
+            clearTimeout(resizeTimer);
+            resizeTimer = setTimeout(self.initCollapse($this), 250);
+          });
+
     $('#persona_contrato_attributes_tipo_de_contrato').change(se);
   });
 
