--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -11,31 +11,32 @@
       <li class="list-group-item text-muted" contenteditable="false">Busqueda</li>
       <li class="list-group-item ">
 
-        <div class="input-group">
-          <span class="input-group-addon">
-            <span class="fa fa-search"></span>
+<div class="input-group">
+        <div class="input-group-btn">
+          <button id="departamentos" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Todos los departamentos
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li class=" disabled">
+              <a href="#" class="departamento" id="">Todos los departamentos</a>
+            </li>
+            <%@departamentos=Departamento.all
 
-          </span>
+            @departamentos.each do |c|%>
+            <%=  raw("<li><a href=\"#\" class=\"departamento\" id=\""+c.id.to_s+"\">"+c.nombre.capitalize+"</a></li>") %>
+            <%end%>
 
+          </ul>
+
+        </div>
           <input type="text" class="form-control" placeholder="Buscar por cedula, nombres, apellidos..." name="search" id="search" value="<%= params[:search]%>">
 <input type="text" id="departamento_search" value="" hidden="hidden">
-          <div class="input-group-btn">
-            <button id="departamentos" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Todos los departamentos
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-              <li class=" disabled">
-                <a href="#" class="departamento" id="">Todos los departamentos</a>
-              </li>
-              <%@departamentos=Departamento.all
 
-              @departamentos.each do |c|%>
-              <%=  raw("<li><a href=\"#\" class=\"departamento\" id=\""+c.id.to_s+"\">"+c.nombre.capitalize+"</a></li>") %>
-              <%end%>
 
-            </ul>
+            <span class="input-group-addon">
+              <span  id="search_icon" class="fa fa-search"></span>
 
-          </div>
+            </span>
         </div>
       </li>
     </ul>
@@ -92,24 +93,38 @@
                 };
               })();
 
+ function loading()
+ {
+   $("#search_icon").attr("class","fa fa-refresh fa-spin fa-fw")
+ }
+ function query()
+ {
+   loading();
+   return "/personas?page=1&search=" + $("#search").val()+"&departamento=" + $("#departamento_search").val();
+
+
+ }
               $(function () {
+
                 $(".departamento").click(function () {
 $(".departamento").parent().attr("class","");
 $(this).parent().attr("class","disabled")
                   $("#departamentos").html($(this).html() + '<span class="caret"></span>');
                   $("#departamento_search").val($(this).attr("id"));
-                  $.getScript("/personas?page=1&search=" + $("#search").val()+"&departamento=" + $("#departamento_search").val());
+                  $.getScript(query());
+
                   return false;
                 });
                 $("#search").keyup(function () {
                   delay(function () {
-                    $.getScript("/personas?page=1&search=" + $("#search").val()+"&departamento=" + $("#departamento_search").val());
+                    $.getScript(query());
+
                     return false;
                   }, 500);
                 });
                 $('a[data-toggle="tab"').on('shown.bs.tab', function () {
+                  $.getScript(query());
 
-                  $.getScript("/personas?page=1&search=" + $("#search").val()+"&departamento=" + $("#departamento_search").val());
                   return false;
                 });
                 $(classes).click(function () {
