generar reportes constancia aplicacion de busqueda por cargo

--- a/app/views/cargos/_form.html.erb
+++ b/app/views/cargos/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="form-group">
     <%= f.label :departamento_id %><br>
-    <%= f.select(:departamento_id, options_for_select(Departamento.all.map{|s|[s.nombre, s.id]}, params[:departamento_id]),{include_blank:'Seleccione una Departamento...'},:class =>"form-control", REQUIRED: "")  %>
+    <%= f.select(:departamento_id, options_for_select(Departamento.all.map{|s|[s.nombre, s.id]}, f.object.departamento_id),{include_blank:'Seleccione una Departamento...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
   <div class="form-group">
     <%= f.label :tipo %><br>
-    <%= f.select(:tipo_id, options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}, params[:tipo_id]),{include_blank:'Seleccione un Tipo de Nomina...'},:class =>"form-control", REQUIRED: "")  %>
+    <%= f.select(:tipo_id, options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}, f.object.tipo_id),{include_blank:'Seleccione un Tipo de Nomina...'},:class =>"form-control", REQUIRED: "")  %>
   </div>
   <h3>Sueldo</h3>
   <%= f.fields_for :sueldos  do |sueldo_builder|  %>
