--- a/app/views/conceptospersonales/index.html.erb
+++ b/app/views/conceptospersonales/index.html.erb
@@ -8,59 +8,75 @@
   <div class="panel-heading">
     Asignaciones
   </div>
+  <%if Conceptopersonal.all.where(tipo_de_concepto:0).length>0%>
   <div class="panel-body">
     <div class="table-responsive">
       <table class="table table-bordered table-condensed table-responsive table-bordered">
         <thead>
           <tr>
             <th>Nombre</th>
-            <th colspan="3">Acciones</th>
+            <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
         </thead>
 
         <tbody>
           <%
           asignaciones=@conceptospersonales.where(tipo_de_concepto: 0).order("created_at")
-          asignaciones.each do |concepto| %>
+          asignaciones.each do |conceptopersonal| %>
           <tr>
-            <td><%= concepto.nombre %></td>
-            <td><%= link_to '', concepto,class: "fa fa-eye" %></td>
-            <td><%= link_to '', edit_conceptopersonal_path(concepto),class: "fa fa-pencil" %></td>
-            <td><%= link_to '', concepto,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+            <td><%= conceptopersonal.nombre %></td>
+            <td class= 'actions'>  <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+
+            <%= link_to '', conceptopersonal,class: "btn btn-default fa fa-eye " %>
+              <%= link_to '', edit_conceptopersonal_path(conceptopersonal),class: "btn btn-default fa fa-pencil" %>
+              <%= link_to '', conceptopersonal,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
           </tr>
           <% end %>
         </tbody>
       </table>
     </div>
   </div>
+  <%elsif%>
+  <div class="actions">
+    <h4>"No hay asignaciones disponibles"</h4>
+  </div>
+  <%end%>
 </div>
 <div class="panel panel-danger">
   <div class="panel-heading">
     Deducciones
   </div>
+  <%if Conceptopersonal.all.where(tipo_de_concepto:1).length>0%>
   <div class="panel-body">
     <div class="table-responsive">
       <table class="table table-bordered table-condensed table-responsive table-bordered">
         <thead>
           <tr>
             <th>Nombre</th>
-            <th colspan="3">Acciones</th>
+            <th>Acciones</th>
           </tr>
         </thead>
 
         <tbody>
           <%
   deducciones=@conceptospersonales.where(tipo_de_concepto: 1).order("created_at")
-            deducciones.each do |concepto| %>
+            deducciones.each do |conceptopersonal| %>
           <tr>
-            <td><%= concepto.nombre %></td>
-            <td><%= link_to '', concepto,class: "fa fa-eye" %></td>
-            <td><%= link_to '', edit_conceptopersonal_path(concepto),class: "fa fa-pencil" %></td>
-            <td><%= link_to '', concepto,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+            <td><%= conceptopersonal.nombre %></td>
+            <td class= 'actions'>  <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+
+            <%= link_to '', conceptopersonal,class: "btn btn-default fa fa-eye " %>
+              <%= link_to '', edit_conceptopersonal_path(conceptopersonal),class: "btn btn-default fa fa-pencil" %>
+              <%= link_to '', conceptopersonal,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
           </tr>
           <% end %>
         </tbody>
       </table>
     </div>
   </div>
+  <%elsif%>
+  <div class="actions">
+    <h4>"No hay asignaciones disponibles"</h4>
+  </div>
+  <%end%>
 </div>
