--- a/app/views/personas/_datos.html.erb
+++ b/app/views/personas/_datos.html.erb
@@ -4,8 +4,10 @@
     Datos Personales
   </div>
   <div class="panel-body">
-    <div class="col-xs-6 ">
+    <div class="col-xs-6 form-group">
+        <%= f.label "Cedula" %><br>
       <div class="form-group input-group">
+
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
         </span>
