--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -19,8 +19,9 @@
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-          <li><%= link_to 'Guardar recibo', persona_path(@persona,format: "pdf")%></li>
-          <li><%= link_to 'Enviar Recibo', enviar_persona_path(@persona), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+          <li><%= link_to 'Guardar recibo', persona_path(@persona,format: "pdf")+"?doc=0"%></li>
+          <li><%= link_to 'Enviar Recibo', enviar_persona_path(@persona)+"?redir=1", method: :post, data: { confirm: 'Esta seguro?' } %></li>
+          <li><%= link_to 'constancia', persona_path(@persona,format: "pdf")+"?doc=1"%></li>
         </ul>
       </li>
 <li role="presentation">
