--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -15,7 +15,7 @@
         <thead>
           <tr>
             <th>Nombre</th>
-            <th>Acciones</th>
+            <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
         </thead>
 
@@ -23,14 +23,15 @@
           <% @tipos.each do |tipo| %>
           <tr>
             <td><%= tipo.nombre %></td>
-            <td><%= link_to '', tipo,class: "fa fa-eye" %>
-              <%= link_to '', edit_tipo_path(tipo),class: "fa fa-pencil" %>
-              <%= link_to '', tipo,class: "fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+            <td><div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+
+          <%= link_to '', tipo,class: "btn btn-default fa fa-eye " %>
+            <%= link_to '', edit_tipo_path(tipo),class: "btn btn-default fa fa-pencil" %>
+            <%= link_to '', tipo,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
           </tr>
           <% end %>
         </tbody>
       </table>
-      <%= paginate @tipos %>
     </div>
   </div>
 <%elsif%>
